# entreedief

./: CMakeLists.txt  README.md
src/: entry.hpp  main.cpp  parser.cpp  parser.hpp  scraper.cpp  scraper.hpp
src/util/: downloader.cpp  downloader.hpp  html_parser.cpp  html_parser.hpp  html_recorder.hpp  html_watcher.hpp  util.hpp
